<resources>
    <string name="app_name">Task Tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="add_task_below">Add a task below!</string>
    <string name="bottom_button">Bottom Button</string>
    <string name="task_name">Task Name</string>
    <string name="create">Create</string>
    <string name="task_description">Description</string>
    <string name="no_tasks_to_display">No tasks to display.</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete_button">Delete_Button</string>
    <string name="textview">TextView</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="complete">Complete</string>
    <string name="completed">----- Completed -----</string>
    <string name="incomplete">----- Incomplete -----</string>

<!--    Dummy/Placeholder Strings-->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_view_task">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>