<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="60dp"
        android:text="@string/save"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Space
            android:id="@+id/top_space"
            android:layout_width="match_parent"
            android:layout_height="33dp" />

        <EditText
            android:id="@+id/etTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/task_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="93dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <EditText
            android:id="@+id/etTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/task_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="155dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <CheckBox
            android:id="@+id/completeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>