<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="36dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/horizontalTaskLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/layout_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:id="@+id/leftSpace"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textViewTaskName"
            android:layout_width="150dp"
            android:layout_height="43dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/completedTaskCheckBox"
            android:layout_width="78dp"
            android:layout_height="44dp"
            android:text="@string/done" />

        <Button
            android:id="@+id/taskDetailsButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/view"
            app:backgroundTint="#FF03DAC5" />

        <Space
            android:id="@+id/rightSpace"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
