<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="465dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="57dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:id="@+id/top_space"
            android:layout_width="match_parent"
            android:layout_height="33dp" />

        <TextView
            android:id="@+id/TextViewTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/task_name"
            android:importantForAutofill="no"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="93dp" />

        <TextView
            android:id="@+id/textViewCompletion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/task_name"
            android:importantForAutofill="no"
            android:text="@string/incomplete"
            android:textAlignment="center"
            android:textColor="#03CD1C"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="93dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <TextView
            android:id="@+id/TextViewTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/task_description"
            android:importantForAutofill="no"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="155dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
